[project]
name = "simple-audio-trimmer"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Campos",email = "brunofdcampos@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ffmpeg-python (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
